crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_missing_radio_value.rs
use reinhardt_pages::page;

fn main() {
	let _ = page!({ input { a11y: off, type: "radio", bind: () } });
}
